Fixed overscroll on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body {
   overflow: hidden;
   background-color: #333;
   height: 99vh;
-  margin: 0;
+  width: 100vw;
+  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
